Align datasets and logs with GCS services
